[REFACTOR] : Refactor tag atm-xml to be used in rows and in page templates
[REFACTOR] : Images and files inserted into polymod fields now use correct website domain instead of main website domain
[REFACTOR] : Add title and company to users details
[REFACTOR] : Add log for user logout
[REFACTOR] : Add previous login message on connection
[FEATURE] : Add oembed object and oembed polymod field (external media field). Update Mediacenter to manage oembed medias
[FEATURE] : Add parent page selection on new page creation
[FEATURE] : Add variable type {page:father:XXX} to get infos from current parent page
[FEATURE] : Add protection for pages and categories to avoid changing important datas inadvertently
[FEATURE] : Add {server:XXX:YYY} variable type
[FEATURE] : Add atm-header tag to create content to be executed before page content
[FEATURE] : Add atm-redirect tag to create a redirection from one page to another one
[FEATURE] : Add HTTPS option for individual pages
[FEATURE] : Add an option to redirect from alt domain to main domain for websites
[FEATURE] : Add {helper:XXX:YYY} variable type which allow usage of PHP helpers to format given variables

V4.1.4 (in progress)
[BUG] : Correct bugs numbers: 2049, 2070, 2154, 2162, 2195, 2252, 2265, 2271, 2272 (see http://www.automne-cms.org/bug/)
[BUG] : Correct bug for better handling of HTTPS websites and cross HTTP and HTTPS websites on the same Automne
[BUG] : Correct bug with external home page redirection
[BUG] : Correct bug with tags which only contain character zero
[BUG] : Correct bug with atm-form tags and cache
[BUG] : Correct some inconsistencies with the recursive atm-linx
[REFACTOR] : Add {{jsdata}} to block text

V4.1.3 (02/05/2011)
[BUG] : Correct bugs numbers: 1860, 2021, 2024, 2032, 2039, 2040, 2043, 2044 (see http://www.automne-cms.org/bug/)
[BUG] : Correct a bug with atm-search-param tag when search type is item and value is block