@@ -7,3 +7,16 @@ ALTER TABLE  `pages` ADD  `https_pag` INT( 1 ) NOT NULL AFTER  `protected_pag` ;
 ALTER TABLE  `modulesCategories` ADD  `protected_mca` INT( 1 ) NOT NULL AFTER  `icon_mca` ;
 ALTER TABLE  `contactDatas` ADD  `company_cd` VARCHAR( 255 ) NOT NULL AFTER  `email_cd` , ADD  `gender_cd` VARCHAR( 255 ) NOT NULL AFTER  `company_cd` ;
 ALTER TABLE  `websites` ADD  `altredir_web` INT( 1 ) NOT NULL AFTER  `altdomains_web` ;
+-- --------------------------------------------------------
+
+--
+-- Structure de la table `mod_object_search_tmp`
+--
+
+DROP TABLE IF EXISTS `mod_object_search_tmp`;
+CREATE TABLE `mod_object_search_tmp` (
+  `search_mos` varchar(32) NOT NULL,
+  `id_mos` int(11) unsigned NOT NULL,
+  UNIQUE KEY `index_mos` (`search_mos`,`id_mos`),
+  KEY `search_mos` (`search_mos`)
+) ENGINE=MyISAM DEFAULT CHARSET=utf8;
